@@ -1,3 +1,13 @@
+2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b94
+
+ * Fix: Return from login/logout was broken.
+
+ * Fix: Removed debug code in login.php
+
+ * Fix: Make register button a popup to work correct.
+
+ * Change: Some Layout nicify.
+
 2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b93
 
  * CHANGE: Consolidate code for album commmands !!
